[package]
name = "server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
sauron = "0.43.9"
serde = "1.0"
serde_json = "1.0"

client = { path = "../client" }
components = { path = "../components" }
